wrote code for app file to structure page, added script cdns for javascript code in html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet" href="/src/index.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="stylesheet" href="/src/index.css" />
     <title>Web Development</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="./src/app.jsx" type="module"></script>
+    <script src="./src/main.jsx" type="module"></script>
+  </body>
 </html>
